...
        viewModel.loadAlbumDetail(albumId)
    }

    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Detalle de Álbum", color = Color.White) },
                navigationIcon = {
                    IconButton(onClick = onBackClick) {
                        Icon(
                            imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                            contentDescription = "Regresar",
                            tint = Color.White
...
