...
            Row(
                verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.spacedBy(4.dp)
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Agregar track",
                    tint = Color.White
                )
                Text(
                    text = "Agregar",
                    color = Color.White
                )
...
